--- a/MVCApp/Views/Customer/Details.cshtml
+++ b/MVCApp/Views/Customer/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MVCApp.Models.CustomerModel
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Customer Info";
 }
 
 <h2>Details</h2>
