--- a/MVCApp/Views/Customer/Index.cshtml
+++ b/MVCApp/Views/Customer/Index.cshtml
@@ -6,22 +6,30 @@
 <h1>Customers</h1>
 
 @{
-    <h3>Customer</h3>
 
-    if (Model == null)
+    if (!Model.Any())
     {
-        <p>No customers.</p>
+        <p>No customers yet.</p>
     }
     else
     {
-        foreach(var customer in Model)
-        {
-            <p>
-                @Html.ActionLink($"{customer.FirstName} {customer.LastName}",
-                             "Details", "Customer",
-                             new { id = customer.Id }, null)
-            </p>
-        }
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>Customer</th>
+                    <th>Discount Rate</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var customer in Model)
+                {
+                    <tr>
+                        <td>@Html.ActionLink($"{customer.FirstName} {customer.LastName}", "Details", "Customer", new { id = customer.Id }, null)</td>
+                        <td>@customer.MembershipType.DiscountRate%</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 }
 }
 
