--- a/MVCApp/Views/Customer/Index.cshtml
+++ b/MVCApp/Views/Customer/Index.cshtml
@@ -17,6 +17,7 @@
             <thead>
                 <tr>
                     <th>Customer</th>
+                    <th>Plan</th>
                     <th>Discount Rate</th>
                 </tr>
             </thead>
@@ -25,6 +26,7 @@
                 {
                     <tr>
                         <td>@Html.ActionLink($"{customer.FirstName} {customer.LastName}", "Details", "Customer", new { id = customer.Id }, null)</td>
+                        <td>@customer.MembershipType.Name</td>
                         <td>@customer.MembershipType.DiscountRate%</td>
                     </tr>
                 }
