--- a/MVCApp/Views/Customer/Details.cshtml
+++ b/MVCApp/Views/Customer/Details.cshtml
@@ -7,3 +7,11 @@
 
 <h3>@Model.FirstName @Model.LastName</h3>
 
+<ul>
+    <li>Membership Type: @Model.MembershipType.Name</li>
+    @if(Model.Birthdate.HasValue)
+    {
+        <li>Birthday: @Model.Birthdate.Value.ToShortDateString()</li>
+    }
+</ul>
+
